--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "express": "^4.13.1",
-    "express-handlebars": "^2.0.1"
+    "express-handlebars": "^2.0.1",
+    "mongoose": "^4.1.0",
+    "node-env-file": "^0.1.7"
   }
 }
