--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "homepage": "https://github.com/Apextion/Project-Delta#readme",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.3",
     "nodemon": "^1.3.8"
   },
   "dependencies": {
     "express": "^4.13.1",
     "express-handlebars": "^2.0.1",
+    "gulp": "^3.9.0",
     "mongoose": "^4.1.0",
     "node-env-file": "^0.1.7"
   }
