--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.3",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-stylus": "^2.0.5",
+    "stylus": "^0.52.0",
     "nodemon": "^1.3.8"
   },
   "dependencies": {
     "express": "^4.13.1",
     "express-handlebars": "^2.0.1",
-    "gulp": "^3.9.0",
+    "jeet": "^6.1.2",
     "mongoose": "^4.1.0",
     "node-env-file": "^0.1.7"
   }
