--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Full Sail University Graduate Showcase Site",
   "main": "app.js",
   "scripts": {
+    "start": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,17 +19,17 @@
   "homepage": "https://github.com/Apextion/Project-Delta#readme",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-connect": "^2.2.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-stylus": "^2.0.5",
-    "stylus": "^0.52.0",
-    "nodemon": "^1.3.8"
+    "nodemon": "^1.3.8",
+    "stylus": "^0.52.0"
   },
   "dependencies": {
     "express": "^4.13.1",
     "express-handlebars": "^2.0.1",
     "jeet": "^6.1.2",
-    "mongoose": "^4.1.0",
-    "node-env-file": "^0.1.7"
+    "mongoose": "^4.1.0"
   }
 }
