--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   },
   "homepage": "https://github.com/Apextion/Project-Delta#readme",
   "devDependencies": {
+    "chai": "^3.2.0",
+    "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-stylus": "^2.0.5",
+    "mocha": "^2.2.5",
     "nodemon": "^1.3.8",
+    "should": "^7.0.3",
     "stylus": "^0.52.0"
   },
   "dependencies": {
