--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Full Sail University Graduate Showcase Site",
   "main": "app.js",
   "scripts": {
-    "start": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
