--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
+    "gulp-mocha": "^2.1.3",
     "gulp-nodemon": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-stylus": "^2.0.5",
+    "gulp-util": "^3.0.6",
     "mocha": "^2.2.5",
     "nodemon": "^1.3.8",
     "should": "^7.0.3",
