--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
+    "gulp-jshint": "^1.11.2",
     "gulp-mocha": "^2.1.3",
     "gulp-nodemon": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-stylus": "^2.0.5",
     "gulp-util": "^3.0.6",
+    "jshint": "^2.8.0",
     "mocha": "^2.2.5",
+    "mocha-jshint": "^2.2.3",
     "nodemon": "^1.3.8",
     "should": "^7.0.3",
     "stylus": "^0.52.0"
