Remove Non-dev Author

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/Apextion/Project-Delta.git"
   },
-  "author": "Christopher Chapman, Jeffrey Davidson",
+  "author": "Christopher Chapman",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Apextion/Project-Delta/issues"
