--- a/package.json
+++ b/package.json
@@ -42,9 +42,13 @@
     "colors": "^1.1.2",
     "express": "^4.13.1",
     "express-handlebars": "^2.0.1",
+    "gulp-concat": "^2.6.0",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-uglify": "^1.3.0",
+    "install": "^0.1.8",
     "jeet": "^6.1.2",
     "mongoose": "^4.1.0",
+    "npm": "^2.14.0",
     "socket.io": "^1.3.6"
   }
 }
