--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.13.1",
     "express-handlebars": "^2.0.1",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-uglify": "^1.3.0",
     "jeet": "^6.1.2",
     "mongoose": "^4.1.0",
     "socket.io": "^1.3.6"
