--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "install": "^0.1.8",
     "jeet": "^6.1.2",
     "mongoose": "^4.1.0",
+    "ng-tags-input": "^3.0.0",
     "npm": "^2.14.0",
     "socket.io": "^1.3.6"
   }
