--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.13.1",
     "express-handlebars": "^2.0.1",
     "gulp-concat": "^2.6.0",
+    "gulp-html-minifier": "^0.1.6",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-uglify": "^1.3.0",
     "install": "^0.1.8",
