--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mongoose": "^4.1.0",
     "ng-tags-input": "^3.0.0",
     "npm": "^2.14.0",
+    "rupture": "^0.6.1",
     "socket.io": "^1.3.6"
   }
 }
